# seges

./: .buildinfo  README.html  README.md  _config.yml  _toc.yml  bg_case.html  bg_case.md  genindex.html  objects.inv  pyproject.toml  requirements.txt  search.html
Azure/: Data Engineering on Microsoft Azure.html  Data Engineering on Microsoft Azure.md  azure.html
Data Science Roles/: Bi.html  Bi.md  Datarols.md  data engineer.md
Data Science rols/: Datarols.html  data engineer.html
Data Science rols/pytorch/: Learning Pytorch.ipynb
Databricks/: Building a lakehouse.md
Mlops/: airflow.html  airflow.ipynb  mlops.html
R tips/: Intro.html  keyring.html  keyring.md
SQL/: Explanatory Data Analysis in SQL.html  Introduction to SQL.html  connect from python and r.html
_build/.doctrees/: README.doctree  bg_case.doctree  environment.pickle  intro.doctree  machine_learning_sklearn.doctree  markdown-notebooks.doctree  markdown.doctree  mymarkdownfile.doctree  notebooks.doctree
_build/html/: .buildinfo  README.html  bg_case.html  genindex.html  intro.html  machine_learning_sklearn.html  markdown-notebooks.html  notebooks.html  (+3 more)
bayes/: bay.html  bay.md  mmm_bayes.html
data/: mmm data.xlsx
ewii/: case.html
git/: git_intro.html  git_intro.md
machine learning/: ml.html
object detection/: object_detection.html
pythonintro/: classes.html  classes.ipynb  python_introduction.html  pythonintro.html  recursion.html  recursion.ipynb  reshaping.html
pytorch/: Learning Pytorch.ipynb  pytorchintro.html  pytorchintro.md
statistical learning/: sl.html  sl.md
(+131 files in other folders)
