[tool.poetry]
name = "datascience"
version = "0.1.0"
description = "Give beginner a bette framework and litteratur to become a Data Science expert"
authors = ["lucas <lucasbagge@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter-book = "^0.13.0"
matplotlib = "^3.5.2"
numpy = "1.19.5"
pymc = "4.1.3"
arviz = "0.12.1"
pandas = "1.3.2"
statsmodels = "^0.13.2"
openpyxl = "^3.0.10"
seaborn = "^0.11.2"
graphviz = "^0.20"
pymc3 = "3.11.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
